@@ -1,5 +1,11 @@
 2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>
 
+	* engines/industrial/src/industrial_style.c: (real_draw_box):
+	Fill in the entries background. However, only fill it if the
+	transparent-bg-hint has not been set.
+
+2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>
+
 	* engines/clearlooks/src/clearlooks_style.c:
 	(clearlooks_style_draw_shadow), (clearlooks_style_draw_box):
 	Fix the check to also fill the background if the widget is NULL.
